@@ -9,6 +9,7 @@
 CVirtualDirectory::CVirtualDirectory(void) : m_vecShares(NULL)
 {
   m_allowPrompting = true;  // by default, prompting is allowed.
+  m_cacheDirectory = true;  // by default, caching is done.
 }
 
 CVirtualDirectory::~CVirtualDirectory(void)
@@ -122,7 +123,7 @@ bool CVirtualDirectory::GetDirectory(const CStdString& strPath, CFileItemList &i
       // Only cache directory we are getting now
       if (strPath.Left(7) != "lastfm:")
         g_directoryCache.Clear();
-      return CDirectory::GetDirectory(strPath, items, m_strFileMask, bUseFileDirectories, m_allowPrompting);
+      return CDirectory::GetDirectory(strPath, items, m_strFileMask, bUseFileDirectories, m_allowPrompting, m_cacheDirectory);
     }
 
     // what do with an invalid path?
